<resources>
    <string name="app_name">BilleX</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="error_inactive_user">Please enter valid credentials.</string>
    <string name="try_again">Please try again later</string>
    <string name="customer">Customer</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="payment">Payment</string>
    <string name="select_customer">Select customer</string>
    <string name="customer_name">Customer Name or ID</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="rupees">\u20B9 </string>
    <string name="about">About</string>
    <string name="about_description">Billex designed to handle time and billing tracking as well as invoicing customers for services and products. Billex can track the working hours by employees as well as expenses associated with projects or clients.</string>
    <string name="logout">Logout</string>
    <string name="unit">Unit</string>
    <string name="date_of_delivery">Date of Delivery</string>
    <string name="date_of_order">Date of Order</string>
    <string name="place_order">Place Order</string>
    <string name="powered_by">Powered by Exiox Technologies</string>
    <string name="order_title">Order</string>
    <string name="order_message">Are you sure want to remove the current order</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="order_delete">Are you sure want to delete the product</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint_accode">ACCCODE</string>
    <string name="hint_head">HEAD</string>
    <string name="hint_agcode">AGCODE</string>
    <string name="hint_address1">Address 1</string>
    <string name="hint_address2">Address 2</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_tin">Tin</string>
    <string name="hint_creditDays">Credit days</string>
    <string name="add_customer">Add Customer</string>
    <string name="hint_name">Name</string>
    <string name="pay">Pay</string>
    <string name="payment_details">Are you sure you want to make payment?</string>
    <string name="payment_delete">Are you sure want to delete?</string>
    <string name="discount">Discount</string>
    <string name="enter_discount">Enter the discount</string>
    <string name="enter_quantity">Enter the quantity</string>
    <string name="quantity_exceed">Quantity Exceed</string>
    <string name="free_count">Free Count</string>
    <string name="enter_price">Enter Price</string>
    <string name="hint_aadhar">Aadhar Number</string>
    <string name="hint_pan">Pan Number</string>
    <string name="hint_gst">Gst Number</string>
    <string-array name="payment_arrays">
        <item>Cash</item>
        <item>Credit</item>
    </string-array>
</resources>
