<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/toolbar_customer"
        layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pb_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:visibility="invisible" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_right"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_name"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_phone"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_phone"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_address1"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_address1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_address2"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_address2"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_tinNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_tin"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_tin"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_creditDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_creditDays"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_creditDays"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_gst_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_gst_number"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_gst"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_pan_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_pan_number"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_pan"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_aadhar_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_aadhar_number"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_aadhar"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>



        <TextView
            android:id="@+id/tv_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/add_customer"
            android:textColor="@color/white"
            android:visibility="visible"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:onClick="AddCustomer"/>
    </RelativeLayout>


</LinearLayout>