<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="0.9"
    tools:context="info.vnk.billex.activity.main.HomeActivity">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/ll_customer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_customer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_customer_main_24dp" />

            <TextView
                android:id="@+id/tv_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/customer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_orders"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_order"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_order_main_24dp" />

            <TextView
                android:id="@+id/tv_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/orders" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/ll_product"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_products"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_product_main_24dp" />

            <TextView
                android:id="@+id/tv_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/products" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_payment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_payment"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_payment_24dp" />

            <TextView
                android:id="@+id/tv_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/payment" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_about_main_24dp" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/about" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_logout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_logout_24dp" />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/logout" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
