<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_order_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_select_customer"
                    style="@style/materialStyleEditText_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:ems="10"
                    android:hint="@string/customer_name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_date_of_order"
                        style="@style/materialStyleEditText_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:focusable="false"
                        android:drawableRight="@drawable/ic_date_today_24dp"
                        android:ems="10"
                        android:hint="@string/date_of_order" />

                    <EditText
                        android:id="@+id/et_date_of_delivery"
                        style="@style/materialStyleEditText_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:focusable="false"
                        android:drawableRight="@drawable/ic_date_range_24dp"
                        android:ems="10"
                        android:hint="@string/date_of_delivery" />


                </LinearLayout>

                <Spinner
                    android:id="@+id/sp_bill_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:entries="@array/payment_arrays"
                    android:visibility="gone"
                    android:padding="5dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <info.vnk.billex.custom.fullScreenSearch.FullScreenSearch
        android:id="@+id/custom_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"></info.vnk.billex.custom.fullScreenSearch.FullScreenSearch>

</RelativeLayout>