<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="5dp">

        <LinearLayout
            android:id="@+id/item_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/product_name" />

                <TextView
                    android:id="@+id/tv_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"
                    android:focusable="true"
                    android:clickable="false"
                    android:text="@string/price" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_discount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/et_discount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/discount"
                            android:inputType="numberDecimal"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_free"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/et_free"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/free_count"
                            android:inputType="numberDecimal"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:gravity="right">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:minHeight="30dp"
                    android:weightSum="0.9"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_minus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:clickable="true"
                        android:text="-" />

                    <TextView
                        android:id="@+id/tv_quantity"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="0.3"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:clickable="true"
                        android:text="1" />

                    <TextView
                        android:id="@+id/tv_plus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:text="+" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_delete_forever_24dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>